# april_manipulation

./: README.md
april_environments/: CMakeLists.txt  package.xml
april_environments/launch/: simple_grasping.launch
april_environments/models/cylinder/: model.config  model.sdf  static_model.sdf
april_environments/models/person_standing/: model.sdf
april_environments/models/table/: model.config  model.sdf
april_environments/models/table2/: model.config  model.sdf
april_environments/models/tall_insole/: model.config  model.sdf  static_model.sdf
april_environments/urdf/: cage_box.urdf
april_environments/worlds/: empty.world  floating.world  simple_grasping.world
april_pick_place_object/: CMakeLists.txt  README.md  package.xml  setup.py
april_pick_place_object/config/: config.rviz  grasp_params.yaml  grasp_planning_core_params.yaml  gripper_open_transformations.yaml  pick_params.yaml  pose_generator_params.yaml
april_pick_place_object/config/grasp_planner/: simple_pregrasp_planner_params.yaml
april_pick_place_object/config/rviz/: teach_grasp_poses.rviz
april_pick_place_object/config/visualisation/: gripper_open_transformations.yaml
april_pick_place_object/launch/: pick.launch  pick_demo.launch  pick_required_components.launch  pose_generator.launch  spawn_object.launch
april_pick_place_object/launch/grasp_planning/: pick_handcoded_grasp_planner.launch  pick_pregrasp_planner.launch  teach_grasp_poses.launch
april_pick_place_object/launch/visualisation/: gripper_tf_autom_finder.launch  rviz_gripper_visualiser.launch
april_pick_place_object/src/: cylinder_grasp.py  grasp_planning_core.py  pick.py  planning_scene_interface.py  pose_generator.py  rviz_gripper_visualiser.py  simple_pregrasp_planner.py
april_pick_place_object/src/april_pick_place_object/: common_grasp_tools.py  pick.py
april_pick_place_object/src/april_pick_place_object/grasp_planner/: handcoded_grasp_planner.py  link_tf_gt_publisher.py  simple_pregrasp_planner.py
april_pick_place_object/src/april_pick_place_object/visualisation/: rviz_gripper_visualiser.py
april_pick_place_object/src/grasp_planner/: handcoded_grasp_planner.py  handcoded_pregrasp_planner.py  link_tf_gt_publisher.py  simple_pregrasp_planner.py  tf_gripper_listener.py
april_pick_place_object/src/visualisation/: gripper_tf_autom_finder.py  rviz_gripper_visualiser.py
fake_object_recognition/: CMakeLists.txt  README.md  package.xml
fake_object_recognition/cfg/: objBounds.cfg
fake_object_recognition/config/: object_bounding_boxes.yaml
fake_object_recognition/launch/: octomap.launch
fake_object_recognition/src/: object_recognition_mockup.py
mia_hand_on_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mia_hand_on_ur5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mia_hand_on_ur5.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
mia_hand_on_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mia_hand_on_ur5_moveit_controller_manager.launch.xml  mia_hand_on_ur5_moveit_sensor_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  (+1 more)
rqt_grasp/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_grasp/common/resources/: rqtgrasp.ui
rqt_grasp/scripts/: rqt_grasp
rqt_grasp/src/rqt_grasp/: rqt_grasp.py
ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+16 files in other folders)
