<?xml version="1.0"?>
<package>

  <name>april_environments</name>
  <version>1.0.0</version>
  <description>
      A collection of grasping environments for Reinforcement learning purposes
  </description>

  <license>BSD</license>

  <author email="oscar.lima@dfki.de">Oscar Lima</author>
  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cob_gazebo_objects</run_depend>

  <export>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
